refactor(InputValidator): 공백 검증 기능 간결하게 수정